feat: Add FlightService to handle flight retrieval with passenger information